[gd_scene load_steps=49 format=3 uid="uid://dyl5xv4xcxy20"]

[ext_resource type="Script" path="res://Characters/player.gd" id="1_6ddra"]
[ext_resource type="Texture2D" uid="uid://6wmo6v2pc6gh" path="res://Art/Sky Island/Character/Idle/Idle-Sheet.png" id="1_plspi"]
[ext_resource type="Texture2D" uid="uid://dy4i1jao0uo1m" path="res://Art/Sky Island/Character/Attack-01/Attack-01-Sheet.png" id="2_obihw"]
[ext_resource type="Texture2D" uid="uid://bovpkqvmti0sd" path="res://Art/Sky Island/Character/Jumlp-All/Jump-All-Sheet.png" id="5_aljoy"]
[ext_resource type="Texture2D" uid="uid://drbhfucpgg6wc" path="res://Art/Sky Island/Character/Run/Run-Sheet.png" id="6_f1bl8"]
[ext_resource type="Script" path="res://Characters/CharacterStateMachine.gd" id="7_7v1cn"]
[ext_resource type="Script" path="res://Characters/GroundState.gd" id="8_psc81"]
[ext_resource type="Script" path="res://Characters/AirState.gd" id="9_hxqlq"]
[ext_resource type="Script" path="res://Characters/LandingState.gd" id="10_gbs8t"]
[ext_resource type="Script" path="res://Characters/Attack.gd" id="10_xu1ag"]
[ext_resource type="Script" path="res://Characters/Sword.gd" id="11_pogm5"]
[ext_resource type="Script" path="res://Characters/FacingCollisionShape2D.gd" id="12_v211m"]
[ext_resource type="PackedScene" uid="uid://rv5hou2nweyl" path="res://Hurtbox and Hitbox/hurtbox.tscn" id="13_3o8l6"]
[ext_resource type="FontFile" uid="uid://5fijd3bku2qp" path="res://UI/Dialogue/GreybeardBold.ttf" id="14_gxj57"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1fcu2"]
radius = 8.0
height = 44.0

[sub_resource type="Animation" id="Animation_o3gfy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kyh2w"]
resource_name = "attack1"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_obihw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sword:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_xuknd"]
resource_name = "attack2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_obihw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sword:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_vvpek"]
resource_name = "double_jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("5_aljoy"), ExtResource("5_aljoy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_6y7p5"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_plspi")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_hcu3f"]
resource_name = "jump_end"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_aljoy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}

[sub_resource type="Animation" id="Animation_kougp"]
resource_name = "jump_start"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_aljoy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11]
}

[sub_resource type="Animation" id="Animation_5or6q"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_f1bl8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6d82t"]
_data = {
"RESET": SubResource("Animation_o3gfy"),
"attack1": SubResource("Animation_kyh2w"),
"attack2": SubResource("Animation_xuknd"),
"double_jump": SubResource("Animation_vvpek"),
"idle": SubResource("Animation_6y7p5"),
"jump_end": SubResource("Animation_hcu3f"),
"jump_start": SubResource("Animation_kougp"),
"run": SubResource("Animation_5or6q")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4qd6g"]
animation = &"attack1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dq8hy"]
animation = &"attack2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eymtw"]
animation = &"double_jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ou7wf"]
animation = &"jump_end"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kpve3"]
animation = &"jump_start"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i0icq"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3xyq0"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h83p5"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_unfe4"]
blend_point_0/node = SubResource("AnimationNodeAnimation_i0icq")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_3xyq0")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_h83p5")
blend_point_2/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rq2pt"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3ed61"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l1ydo"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_net12"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u5ckk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bj2go"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_km3wr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3q31d"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g6y1v"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oc7v0"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_lwy31"]
states/attack1/node = SubResource("AnimationNodeAnimation_4qd6g")
states/attack1/position = Vector2(343.333, 176.667)
states/attack2/node = SubResource("AnimationNodeAnimation_dq8hy")
states/attack2/position = Vector2(572.963, 177.111)
states/double_jump/node = SubResource("AnimationNodeAnimation_eymtw")
states/double_jump/position = Vector2(574.222, 12.1111)
states/jump_end/node = SubResource("AnimationNodeAnimation_ou7wf")
states/jump_end/position = Vector2(586.667, 91.6667)
states/jump_start/node = SubResource("AnimationNodeAnimation_kpve3")
states/jump_start/position = Vector2(350.667, 22.3333)
states/move/node = SubResource("AnimationNodeBlendSpace1D_unfe4")
states/move/position = Vector2(344, 100.222)
transitions = ["Start", "move", SubResource("AnimationNodeStateMachineTransition_rq2pt"), "move", "jump_start", SubResource("AnimationNodeStateMachineTransition_3ed61"), "jump_start", "jump_end", SubResource("AnimationNodeStateMachineTransition_l1ydo"), "jump_start", "double_jump", SubResource("AnimationNodeStateMachineTransition_net12"), "double_jump", "jump_end", SubResource("AnimationNodeStateMachineTransition_u5ckk"), "jump_end", "move", SubResource("AnimationNodeStateMachineTransition_bj2go"), "move", "attack1", SubResource("AnimationNodeStateMachineTransition_km3wr"), "attack1", "attack2", SubResource("AnimationNodeStateMachineTransition_3q31d"), "attack1", "move", SubResource("AnimationNodeStateMachineTransition_g6y1v"), "attack2", "move", SubResource("AnimationNodeStateMachineTransition_oc7v0")]
graph_offset = Vector2(-26, 36)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_gt8k2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlm1m"]
size = Vector2(23, 55)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sgk5q"]
radius = 6.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7xfr5"]
radius = 14.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_6ddra")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_1fcu2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_obihw")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6d82t")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_lwy31")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_gt8k2")
parameters/move/blend_position = 0

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("7_7v1cn")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("Ground")

[node name="Ground" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("air_state", "attack_state")]
script = ExtResource("8_psc81")
air_state = NodePath("../Air")
jump_animation = "jump_start"
attack_state = NodePath("../Attack")

[node name="BufferTimer" type="Timer" parent="CharacterStateMachine/Ground"]
wait_time = 0.05
one_shot = true
autostart = true

[node name="Air" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("landing_state")]
script = ExtResource("9_hxqlq")
landing_state = NodePath("../Landing")
landing_animation = "jump_end"

[node name="Landing" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("ground_state")]
script = ExtResource("10_gbs8t")
landing_animation_name = "jump_end"
ground_state = NodePath("../Ground")
can_move = false

[node name="Attack" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("return_state")]
script = ExtResource("10_xu1ag")
return_state = NodePath("../Ground")
can_move = false

[node name="Timer" type="Timer" parent="CharacterStateMachine/Attack"]
wait_time = 0.3
one_shot = true

[node name="Sword" type="Area2D" parent="." node_paths=PackedStringArray("player", "facing_shape")]
collision_layer = 0
collision_mask = 4
monitoring = false
script = ExtResource("11_pogm5")
player = NodePath("..")
facing_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword"]
position = Vector2(25.5, -4.5)
shape = SubResource("RectangleShape2D_tlm1m")
script = ExtResource("12_v211m")
facing_left_position = Vector2(-29, 0)
facing_right_position = Vector2(29, 0)

[node name="Hurtbox" parent="." instance=ExtResource("13_3o8l6")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_sgk5q")

[node name="NPCFinder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPCFinder"]
position = Vector2(19, 2)
shape = SubResource("CircleShape2D_7xfr5")

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = -17.0
offset_top = -28.0
offset_right = 313.0
offset_bottom = 22.0
scale = Vector2(0.1, 0.1)
theme_override_fonts/font = ExtResource("14_gxj57")
max_value = 5.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="CharacterStateMachine/Landing" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Landing" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Attack" method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="Sword" to="Sword" method="_on_body_entered"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="Hurtbox"]
